--- a/src/components/FontTest.astro
+++ b/src/components/FontTest.astro
@@ -3,7 +3,7 @@
 
 <article>
     <h1 class="first">Overskriften</h1>
-    <p>Brødtekst der får kundernes <span class="green">trusser</span> til at falde ned om anklerne. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus vero placeat cum. Voluptatum expedita cumque dolores magnam id nostrum, ullam nemo eum ducimus accusamus! Maxime similique a excepturi beatae nihil.</p>
+    <p>Brødtekst der får kundernes trusser til at falde ned om anklerne. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus vero placeat cum. Voluptatum expedita cumque dolores magnam id nostrum, ullam nemo eum ducimus accusamus! Maxime similique a excepturi beatae nihil.</p>
     <button>Tilmeld nu</button>
 </article>
 
@@ -15,42 +15,16 @@ article {
   align-items: center;
   height: 100dvh;
   gap: 1rem;
+  padding: 1rem;
 }
 
-    h1, p {
-        color: white;
-          text-align: center;
-    }
-
-    h1 {
-        font-size: 4rem;
-     font-family: 'Bungee', sans-serif;
-   color: #008C2A;
-  /*  color: #F87518; */
-  color: #333333;
-  
-    }
-
-    p {
-        font-size: 1.2rem;
-        font-family: 'Montserrat', sans-serif;
-       color: #333333;
-    }
-
-    .green {
-      color: #008C2A;
-      font-weight: bold;
-    }
-
     button {
-        background-color: #008C2A;
-     /*    background-color: #F87518; */
-        color: #F8F8FF;
+        background-color: var(--accent);
+        color: var(--primary);
         border: none;
         padding: 0.5rem 1rem;
         border-radius: 10px;
         font-weight: bold;
-           font-family: 'Montserrat', sans-serif;
     }
 
     button:hover {
