--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,10 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+import "../styles/style.css";
+import NavMenu from "../components/NavMenu.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -18,58 +22,18 @@ const { title } = Astro.props;
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
 	<body>
+		<NavMenu/>
 		<slot />
+		<Footer/>
+		<script src="../scripts/script.js"></script>
 	</body>
 </html>
-<style is:global>
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
-body {
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a {
-  overflow-wrap: break-word;
-  hyphens: auto;
-}
-
-p {
-	max-width: 60ch;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
+<style>
+	body {
+		overflow: hidden;
+	}
 </style>
