--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,15 +3,15 @@ import Layout from '../layouts/Layout.astro';
 import FontTest from "../components/FontTest.astro";
 ---
 
-<Layout title="Velkommen">
+<Layout title="Om mig">
 	<main>
-		<FontTest/>
+		<p>About me bitches</p>
 	</main>
 </Layout>
 
 <style>
 	main {
 		min-height: 100dvh;
-		background-color: var(--primary);
+		background-color: #F8F8FF;
 	}
 </style>
